# cusub2.1

./: .gitignore  README.md  pid_tuning_commands.txt  startup.sh  test.py
.github/workflows/: ros2ci.yaml
cusub2_teleoperation/: package.xml  setup.cfg  setup.py
cusub2_teleoperation/launch/: cusub2_teleop_launch.py
docs/: Camera.md  axis_convention.md  build_instructions.md  maestro.md
gazebo/: bridge_config.yaml  bridge_thruster.yaml  launch_sim_holonomic.sh  launch_thruster.sh  sim.md  sim_holonomic.sdf  sim_holonomic_bridge.yaml  sim_test_world.sdf  sim_thruster.sdf
gazebo/chimera/: chimera.sdf  model.config
install/: local_setup.sh  setup.sh
log/: latest_build
src/autonomy/: package.xml  setup.py
src/autonomy/autonomy/: autonomy_demo_node.py  autonomy_node.py
src/behavior_tree/: package.xml  setup.py
src/behavior_tree/behavior_tree/: BehaviorTree.py  client_member_function.py  exampleTree.py  my_Tree  publisher_member_function.py  service_member_function.py  subscriber_member_function.py
src/behavior_tree/visualization/: exampleTree
src/bt_trees/: CMakeLists.txt  include_behaviortrees_ros2.sh  package.xml
src/bt_trees/src/: add_two_ints_bt_service.cpp  centerTarget.cpp  fib.cpp  navigateGate.cpp  treeLayout.xml
src/bt_trees/src/add_ints_example/: README  add_two_ints_bt_service.cpp  treeLayout.xml
src/bt_trees/src/example_bt/: README
src/bt_trees/srv/: Rotation.srv
src/cfg/: sub_properties.yaml
src/chimera_camera/: setup.py
src/chimera_camera/chimera_camera/: CameraPublisher.py  cameraCompressed.py  camera_node.py  coordinator_node.py  detect.py  multi_cam_test.py  simple_sub.py
src/chimera_camera/launch/: camera_launch.xml  multi_cam_launch.py  yolo_detector_launch.py
src/custom_interfaces/: CMakeLists.txt  adding_interfaces.md
src/custom_interfaces/msg/: ThrusterValues.msg
src/custom_interfaces/srv/: DetectObjects.srv  KillMotors.srv  SendPWM.srv  SetPIDValues.srv
src/cv_detection_interfaces/: CMakeLists.txt  package.xml
src/cv_detection_interfaces/msg/: CVData.msg  CVDataPrimitive.msg  NamedPose.msg  NamedPoseArray.msg
src/cv_detection_package/: package.xml  setup.cfg  setup.py
src/cv_detection_package/config/: cameras.yaml  objects.yaml
src/cv_detection_package/cv_detection_package/: cv_detection_node.py  cv_detection_subscriber.py
src/dvl_data/dvl_data/: DVL_subpub.py  dvl_tcp_parser.py
src/motor_control/: package.xml  setup.py
src/simulation/: package.xml  setup.py
src/teleop/: setup.py
src/teleop/teleop/: joyListener.py  (+1 more)
(+26 files in other folders)
